wp-content/plugins/raffleleader/assets/css/raffle_frontend_style.css
p {
    margin-bottom: 0 !important;
}

.raffleleader-rules-and-terms-preview{
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100%;
    width: 100%;
    z-index: 100000;
    background-color: white;
    padding: 3vh;
    overflow-y: scroll;
}

.raffleleader-rules-and-terms-preview > h2{
    width: 100%;
    text-align: center;
    margin-bottom: 2vh;
}

.raffleleader-rules-and-terms-preview > p{
    width: 100%;
    text-align: left;
    font-size: 1.5vh;
    color: black;
}

.rules-and-terms-close-button{
    position: absolute;
    top: 10px; 
    right: 30px; 
    border: none; 
    background: none; 
    cursor: pointer; 
    font-size: 24px; 
}

.on-submit-loading-btn{
    transition: width 0.7s ease-in-out !important;
    width: 85% !important;
    z-index: 10 !important;
    margin: 0 !important;
}

.on-submit-success-btn{
    width: 85% !important;
    z-index: 10 !important;
    animation: fade-success 2s;
}

.on-submit-failure-btn{
    width: 85% !important;
    z-index: 10 !important;
    animation: fade-failure 2s;
}

.logged-in-btn{
    width: 85% !important;
    z-index: 10 !important;
    height: 0% !important;
}

.logged-in-input{
    display: none !important;
}

.inactive-entry{
    opacity: 0.85;
    filter: greyscale(100%);
    pointer-events: none;
}

.inactive-additional-entry{
    opacity: 0.5;
    filter: greyscale(100%);
    pointer-events: none;
}

.completed-additional-entry{
    animation: fade-success 2s;
    pointer-events: none;
}

.additional-entry-handle-form-load{
    width: 87% !important;
    margin: 0 !important;
}

.additional-entry-handle-form-load button .lds-ring div {
    margin: -4px;
    margin-left: 6px;
}

.additional-entry-handle-form-appear{
    transition: height 0.7s ease-in-out;
    height: 0% !important;
}

.raffleleader-entry-handle-input{
    position: relative;
    top: 30%;
    width: 95%;
    height: 100%;
    padding: 0.9vh 0 0.9vh 0;
    border: 1px solid gray;
    border-radius: 10px;
}

.lds-ring {
    display: inline-block;
    position: relative;
    width: 2.2vw;
    height: 3.5vh;
}
.lds-ring div {
    box-sizing: border-box;
    display: block;
    position: absolute;
    width: 3.5vh;
    height: 3.5vh;
    margin: 8px;
    border: 4px solid #fff;
    border-radius: 50%;
    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
    border-color: #fff transparent transparent transparent;
}
.lds-ring div:nth-child(1) {
    animation-delay: -0.45s;
}
.lds-ring div:nth-child(2) {
    animation-delay: -0.3s;
}
.lds-ring div:nth-child(3) {
    animation-delay: -0.15s;
}
@keyframes lds-ring {
    0% {
    transform: rotate(0deg);
    }
    100% {
    transform: rotate(360deg);
    }
}

@keyframes fade-success {
    0% {
        background-color: green;
    }

    50% {
        background-color: green;
    }

    100% {
        background-color: #1501FE;
    }
}

@keyframes fade-failure {
    0% {
        background-color: red;
    }

    50% {
        background-color: red;
    }

    100% {
        background-color: #1501FE;
    }
}

@keyframes fadeFromGreyscale {
    from {
        filter: grayscale(100%);
    }
    to {
        filter: grayscale(0%);
    }
}

